# decant

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  pages.yml  release.yml  windows.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/samples/: detect.json  invoice.chunks.json  invoice.extract.json  invoice.parse.json
app/src/: App.tsx  styles.css
app/src/components/: Dropdown.tsx  ElapsedTimer.tsx  Icon.tsx  Logo.tsx  Markdown.tsx  Processing.tsx  SchemaBuilder.tsx  Toaster.tsx
app/src/lib/: engine.ts  files.ts  jobs.ts  persist.ts  render.ts  schemas.ts  toast.ts  update.ts
app/src/screens/: Guide.tsx  Home.tsx  Review.tsx  Settings.tsx  StudioList.tsx
docs/: ACCURACY.md  SECURITY.md  USE-CASES.md
landing/: index.html
scripts/: check-connection.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
